--- a/portfolio.html
+++ b/portfolio.html
@@ -356,7 +356,7 @@ a:hover {
         <div class="container nav">
             <div class="logo">3D.Arts.Dev</div>
             <nav>
-                <a href="portfolio.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#about">About me</a>
                 <a href="skills.html">Skills</a>
                 <a href="projects.html">Projects</a>
