--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,47 @@
     <title>My Projects</title>
 
     <style>
+        header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(6px);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    font-weight: 700;
+    letter-spacing: 0.08em;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #a4b58a;
+}
+
+nav a {
+    color: #ECDFCC;
+    text-decoration: none;
+    font-size: 14px;
+    margin-left: 18px;
+    padding-bottom: 3px;
+    border-bottom: 2px solid transparent;
+}
+
+nav a:hover {
+    border-bottom-color: #ECDFCC;
+}
+
         body {
             margin: 0;
             font-family: Arial, sans-serif;
             background: #000;
-            color: #fff;
+            color: #ECDFCC;
             padding: 20px;
         }
 
@@ -28,6 +64,19 @@
     </style>
 </head>
 <body>
+      <header>
+        <div class="container nav">
+            <div class="logo">3D.Arts.Dev</div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="portfolio.html">About me</a>
+                <a href="skills.html">Skills</a>
+                <a href="projects.html">Projects</a>
+                <a href="portfolio.html#contact">Contacts</a>
+
+            </nav>
+        </div>
+    </header>
 
     <h1>My Projects</h1>
 
